# OpenSkill

./: main.py  mcp_openSkill.py  readme.md  requirements.txt
OpenSkill1.1/: local_llm.py  main.py  readme.md  requirements.txt  skill_evolution.py  skill_graph.py  skill_vector.py
OpenSkill1.1/skills_output/: Raft-Traffic-Optimized_Eventual_Consiste_a493a4b2.md  a493a4b2.json  skill_graph.json
OpenSkill1.1/templates/: index.html
OpenSkillLib/: REPORT_native_geometry.md  Readme.md
OpenSkillLib/src/: Code.py  EVOSkills.txt  Makefile  MemCollab.txt  OpenSkill.txt  S_PATHRAG.txt  TurbOQuant.txt  bootstrap_data.py  bootstrap_library.py  cross_attn_trainer.py  pil.py  projector_trainer.py  pyproject.toml  queryrttt.py  setup.cfg  trace2skill.txt  train_scorer.py
OpenSkillLib/src/openskill/: __init__.py  client.py
OpenSkillLib/src/openskill/cli/: __init__.py  main.py
OpenSkillLib/src/openskill/core/: __init__.py  crafter.py  evolver.py  gnn_encoder.py  graph.py  loadout.py  trainer.py  vector.py  verifier.py
OpenSkillLib/src/openskill/injection/: __init__.py  cross_attention.py  local_llm.py  soft.py
OpenSkillLib/src/openskill/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
OpenSkillLib/src/openskill/mcp/: __init__.py  server.py
OpenSkillLib/src/openskill/retrieval/: __init__.py  langchain.py  retriever.py
OpenSkillLib/src/openskill/storage/: __init__.py  base.py  cloud.py  local.py
OpenSkillLib/src/server/: __init__.py  app.py
OpenSkillLib/src/server/routes/: craft.py  evolve.py  retrieve.py
SkillTesting/MemCollab/: 1b9a21ca.json  73dd87b0.json  8c6c8ec0.json  8d36fd87.json  Binary_Search_Boundary_Update_Correctnes_1b9a21ca.md  Combinatorial_Probability_with_Multi-Cat_73dd87b0.md  Constraint-First_Meeting_Scheduling_8c6c8ec0.md  Constraint-Propagation_Deduction_Matrix__e9e03486.md  Generate_benchmarksLOG.txt  Interval_Merging_8d36fd87.md  Readme.md  e9e03486.json  generate_benchmarks.py  main.py  tttt_inferenceLOGS.txt  ttttt_inference.py
SkillTesting/MemCollab/skills_output/: 61e6e7e1.json  6bc4626b.json  6d6c449e.json  9c9ae2a6.json  Binary_Search_Boundary_Convergence_b21549a8.md  Combinatorial_Probability_with_Grouped_D_6bc4626b.md  Constraint-Propagating_Deduction_Matrix_6d6c449e.md  Constraint-Propagating_Meeting_Scheduler_cc2cd239.md  Merge_Overlapping_Intervals_61e6e7e1.md  Modular_Exponentiation_for_Last-N-Digits_9c9ae2a6.md  b21549a8.json  cc2cd239.json
SkillTesting/MemCollab/templates/: index.html
