[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openskill"
dynamic = ["version"]
description = "Geometric skill memory for LLM agents — TurboQuant + S-Path-RAG"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "OpenSkill Team", email = "team@openskill.ai"}
]
keywords = ["llm", "rag", "knowledge-graph", "skill", "agent", "retrieval", "vector-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependências base (Sempre instaladas)
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
    "click>=8.0",
    "rich>=13.0",     # Essencial para a nova CLI que criamos
    "torch>=2.0",      # Necessário para os tensores do TurboQuant
]

[project.optional-dependencies]
# Injeção Vetorial e Modelos Locais (HuggingFace)
# Adicionados: bitsandbytes e accelerate para rodar o Qwen em GPUs comuns
hf = [
    "transformers>=4.40",
    "sentence-transformers>=2.5",
    "accelerate>=0.26",
    "bitsandbytes>=0.42",
    "scipy>=1.10",
]
gnn = ["torch", "torch_geometric"]

ollama = ["ollama>=0.1"]
vllm = ["vllm>=0.4"]

# Armazenamento especializado
redis = ["redis>=5.0"]
pgvector = ["psycopg2-binary>=2.9", "pgvector>=0.3"]

# Integrações com ecossistema
langchain = ["langchain-core>=0.3", "langchain-community>=0.3"]
llamaindex = ["llama-index-core>=0.11", "llama-index-llms-openai-like>=0.3"]
mcp = ["mcp>=1.0"]

# Servidor HTTP
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=0.1",
    "python-multipart>=0.0.9"
]

# Desenvolvimento
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.13", "pre-commit>=4.0"]

# Tudo incluso (Para vast.ai ou workstations de IA)
all = [
    "openskill[hf,server,langchain,llamaindex,mcp,redis,pgvector]"
]

[project.scripts]
openskill = "openskill.cli.main:cli"
openskill-mcp = "openskill.mcp.server:run"

[project.urls]
Homepage = "https://openskill.ai"
Repository = "https://github.com/openskill/openskill"
Documentation = "https://docs.openskill.ai"
Hub = "https://hub.openskill.ai"

# Configuração do Hatch para ler a versão do __init__.py automaticamente
[tool.hatch.version]
path = "openskill/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["openskill"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]