 
[metadata]
name = openskill
version = attr: openskill.__version__
description = Geometric skill memory for LLM agents
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.26
    httpx>=0.27
    pydantic>=2.0
    structlog>=24.0
    click>=8.0

[options.packages.find]
exclude =
    tests
    docs
    server

[options.extras_require]
hf =
    transformers>=4.40
    torch>=2.0
    sentence-transformers>=2.5
ollama = ollama>=0.1
vllm = vllm>=0.4
redis = redis>=5.0
pgvector =
    psycopg2-binary>=2.9
    pgvector>=0.3
langchain =
    langchain-core>=0.3
    langchain-community>=0.3
llamaindex =
    llama-index-core>=0.11
    llama-index-llms-openai-like>=0.3
mcp = mcp>=1.0
server =
    fastapi>=0.115
    uvicorn[standard]>=0.30
    sse-starlette>=0.1
dev =
    pytest>=8.0
    pytest-asyncio>=0.24
    ruff>=0.6
    mypy>=1.13
    pre-commit>=4.0
all =
    openskill[hf,ollama,server,langchain,llamaindex,mcp]

[options.entry_points]
console_scripts =
    openskill = openskill.cli.main:main
    openskill-mcp = openskill.mcp.server:run

[tool:pytest]
testpaths = tests
asyncio_mode = auto
